using sql server, ef core, generating migrations and creating repositories

--- a/backend/src/Fundo.Application/Fundo.Application.csproj
+++ b/backend/src/Fundo.Application/Fundo.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Fundo.Domain\Fundo.Domain.csproj" />
+    <ProjectReference Include="..\Fundo.Infrastructure\Fundo.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
