--- a/backend/src/Fundo.Applications.WebApi/Fundo.Applications.WebApi.csproj
+++ b/backend/src/Fundo.Applications.WebApi/Fundo.Applications.WebApi.csproj
@@ -10,8 +10,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.36">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.36" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.36">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Fundo.Application\Fundo.Application.csproj" />
     <ProjectReference Include="..\Fundo.Domain\Fundo.Domain.csproj" />
+    <ProjectReference Include="..\Fundo.Infrastructure\Fundo.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
