cors, fetching api from angular, styling table

--- a/backend/src/Fundo.Applications.WebApi/appsettings.json
+++ b/backend/src/Fundo.Applications.WebApi/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CorsSettings": {
+    "AngularAppUrl": "http://localhost:4200"
+  }
 }
