dockerized component and README with setup instructions

--- a/backend/src/Fundo.Applications.WebApi/appsettings.json
+++ b/backend/src/Fundo.Applications.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=LoanDB;User Id=sa;Password=WowReallyStrongPassword0001;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=sqldb;Database=LoanDB;User Id=sa;Password=WowReallyStrongPassword0001;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
